feat: Refactor all classes
BREAKING CHANGES:
upgrade to jdk-21