@@ -15,16 +15,16 @@
 
     <properties>
         <maven-installer-plugin.version>2.5.2</maven-installer-plugin.version>
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <os-maven.plugin.version>1.5.0.Final</os-maven.plugin.version>
-        <lombok.version>1.18.2</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javax.annotation-api.version>1.3.1</javax.annotation-api.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <jackson.core.version>2.9.8</jackson.core.version>
         <async-http-client.version>2.8.1</async-http-client.version>
-        <java.version>11</java.version>
+        <java.version>21</java.version>
         <log4j.version>1.3.8.RELEASE</log4j.version>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     </properties>
@@ -130,6 +130,10 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
